ahora se puede buscar a usuarios por patron de correo
