# internal/user/infrastructure/handler/find.go
@@ -2,9 +2,7 @@ package handler
 
 import (
 	"github.com/gin-gonic/gin"
-	"github.com/google/uuid"
 	"log"
-	"meliarqsoft2/internal/user/domain"
 	"meliarqsoft2/internal/user/infrastructure/dto"
 	"net/http"
 )
@@ -15,29 +13,25 @@ import (
 // @Accept json
 // @Produce json
 // @Tags Users
-// @Param 	id 	path  string true "ID from user to get"
-// @Success 200 {object} dto.UserDTO
+// @Param email	query string  false "find name"
+// @Success 200 {object} []dto.UserDTO
 // @Failure 400
-// @Failure 404
 // @Failure 500
-// @Router /users/{id} [GET]
+// @Router /users [GET]
 func (handler UserGinHandler) Find(c *gin.Context) {
-	id, err := uuid.Parse(c.Param("id"))
+	name := c.Query("email")
 
-	if err != nil {
-		c.Status(http.StatusBadRequest)
-		log.Println(err.Error())
-		return
-	}
-
-	var user *domain.User
-	user, err = handler.manager.Find(id)
-
+	resp, err := handler.manager.Find(name)
 	if err != nil {
 		c.Status(http.StatusNotFound)
 		log.Println(err.Error())
 		return
 	}
 
-	c.JSON(http.StatusOK, dto.MapUserToJSON(user))
+	var res []dto.UserDTO
+	for _, elem := range resp {
+		res = append(res, dto.MapUserToJSON(elem))
+	}
+
+	c.JSON(http.StatusOK, res)
 }
